# esp32p4c5_edgeAI_lot

./: .gitignore  CMakeLists.txt  DESIGN.md  GIT_GUIDE.md  HANDOFF.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/c5_bridge/: CMakeLists.txt  c5_at_sdio.c  c5_bridge.c  c5_sdio_probe.c  c5_sdio_transport.c
components/c5_bridge/include/: c5_bridge.h
doc/: 变更日志.md
main/: CMakeLists.txt  app_main.cpp  app_video.c  app_video.h  face_ai.cpp  face_ai.hpp  http_server.cpp  http_server.hpp  idf_component.yml  jpeg_annotate.cpp  jpeg_annotate.hpp  pest_ai.cpp  pest_ai.hpp  stream_switch.h  wifi_tcp_stream.cpp  wifi_tcp_stream.hpp
p4c5_bridge/: .gitignore  README.md  bridge.py  requirements.txt
p4c5_bridge/static/: dashboard_p4c5.html
scripts/: build_now.bat  build_p4.bat  flash_p4.bat
